Implementacao de protótipo inicial

--- a/app/views/ids/ajuda.html.erb
+++ b/app/views/ids/ajuda.html.erb
@@ -16,7 +16,10 @@
 		<main id="center" class="column">
 			<article>
 			
-				<h1><%= @messages.html_safe %></h1>
+				<h1>Utilize o menu ao lado para navegar.</h1><br>
+				<p>Não há nenhuma validação de dados, portanto tenha cuidado nos dados inseridos.</p>
+				<p>Este aplicativo tem como intuito apenas gerar ids com suporte para nomeclatura de máquinas no sistema OTRS (link ao lado)</p>
+				<p>Os tokens são gerados automaticamente com uma série de variáveis, e as informações guardadas são com apenas intuito de orientação dos ids, sem nenhuma validade com o banco de dados real do OTRS.</p>
 				</article>								
 		</main>
 
