--- a/app/views/ids/sobre.html.erb
+++ b/app/views/ids/sobre.html.erb
@@ -16,7 +16,10 @@
 		<main id="center" class="column">
 			<article>
 			
-				<h1><%= @messages.html_safe %></h1>
+				<h1>Este é um aplicativo na plataforma Ruby on Rails.</h1><br>
+				<p><a href="https://github.com/rbm4/CMI_ids">Repositório no gitub.</a></p>
+				<p>Produzido pelo CMI-NTI</p>
+				<p></p>
 				</article>								
 		</main>
 
