--- a/app/views/ids/home.html.erb
+++ b/app/views/ids/home.html.erb
@@ -3,7 +3,6 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>3 Column Layout</title>
 	
 </head>
 
@@ -46,11 +45,11 @@
 		<nav id="left" class="column">
 			<h3>Menu</h3>
 			<ul>
-				<li><a href="#">Cadastrar</a></li>
-				<li><a href="#">Consultar</a></li>
-				<li><a href="#">Sobre</a></li>
-				<li><a href="#">Ajuda</a></li>
-				<li><a href="#">OTRS</a></li>
+				<li><a href="/">Cadastrar</a></li>
+				<li><a href="search">Consultar</a></li>
+				<li><a href="sobre">Sobre</a></li>
+				<li><a href="ajuda">Ajuda</a></li>
+				<li><a href="http://centraldeservicostic.ufpe.br/otrs/index.pl">OTRS</a></li>
 			</ul>
 
 		</nav>
