--- a/app/views/ids/sobre.html.erb
+++ b/app/views/ids/sobre.html.erb
@@ -26,7 +26,7 @@
 		<nav id="left" class="column">
 			<h3>Menu</h3>
 			<ul>
-				<li><a href="/">Cadastrar</a></li>
+				<li><a href="/"></a>Gerar ID</a></li>
 				<li><a href="search">Consultar</a></li>
 				<li><a href="sobre">Sobre</a></li>
 				<li><a href="ajuda">Ajuda</a></li>
