--- a/app/views/ids/ajuda.html.erb
+++ b/app/views/ids/ajuda.html.erb
@@ -17,7 +17,7 @@
 			<article>
 			
 				<h1>Utilize o menu ao lado para navegar.</h1><br>
-				<p>Não há nenhuma validação de dados, portanto tenha cuidado nos dados inseridos.</p>
+				<p>Não há nenhuma validação de dados, tampouco dados salvos nessa plataforma.</p>
 				<p>Este aplicativo tem como intuito apenas gerar ids com suporte para nomeclatura de máquinas no sistema OTRS (link ao lado)</p>
 				<p>Os tokens são gerados automaticamente com uma série de variáveis, e as informações guardadas são com apenas intuito de orientação dos ids, sem nenhuma validade com o banco de dados real do OTRS.</p>
 				</article>								
@@ -27,7 +27,6 @@
 			<h3>Menu</h3>
 			<ul>
 				<li><a href="/">Gerar ID</a></li>
-				<li><a href="search">Consultar</a></li>
 				<li><a href="sobre">Sobre</a></li>
 				<li><a href="ajuda">Ajuda</a></li>
 				<li><a href="http://centraldeservicostic.ufpe.br/otrs/index.pl">OTRS</a></li>
