--- a/app/views/ids/sobre.html.erb
+++ b/app/views/ids/sobre.html.erb
@@ -19,6 +19,7 @@
 				<h1>Este é um aplicativo na plataforma Ruby on Rails.</h1><br>
 				<p><a href="https://github.com/rbm4/CMI_ids">Repositório no gitub.</a></p>
 				<p>Produzido pelo CMI-NTI</p>
+				<p>Aplicação por: Ricardo Malafaia (rbm4@cin.ufpe.br)</p>
 				<p></p>
 				</article>								
 		</main>
@@ -26,8 +27,8 @@
 		<nav id="left" class="column">
 			<h3>Menu</h3>
 			<ul>
-				<li><a href="/"></a>Gerar ID</a></li>
-				<li><a href="search">Consultar</a></li>
+				<li><a href="/">Gerar ID</li>
+				
 				<li><a href="sobre">Sobre</a></li>
 				<li><a href="ajuda">Ajuda</a></li>
 				<li><a href="http://centraldeservicostic.ufpe.br/otrs/index.pl">OTRS</a></li>
