--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,10 +126,10 @@
 	
 	
 <body>
-<header id="header"><p>CMI - NTI UFPE   <img src="images/nti.png" ></p></header>
+<header id="header"><p><a href="/">CMI - NTI UFPE   <img src="images/nti.png" ></a></p></header>
 <%= yield %>
 <div id="footer-wrapper">
-		<footer id="footer"><p><a href="https://github.com/rbm4/CMI_ids">Github</a></p></footer>
+		<footer id="footer"><p><h5>Consulte o código fonte abaixo: <a href="https://github.com/rbm4/CMI_ids">Github</a></footer></h5>
 	</div>
 </body>
 </html>
